<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="LEAP YEAR CALCULATOR"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="Please enter any year to find whether it is a leap year or not"
        android:textAlignment="center"
        android:textColor="#ccc"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:textSize="13dp"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:id="@+id/edt_leapyear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Please enter a year"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="40dp" />

    <TextView
        android:textSize="16dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_leapyear" />

    <View
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_find"
        android:layout_marginBottom="20dp"
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/button_find"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="Find"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_clear"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="Reset"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/button_find"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>